Added many SOAP API related class and implementation