@@ -1,13 +1,14 @@
 package com.qaninjas.api.implementation;
 
+import java.nio.charset.StandardCharsets;
+
 import javax.xml.soap.*;
 
 public class SoapAuthentication {
 
 	public void sendBasicAuthForSoapAsHeader(String userName, String password, SOAPMessage soapMessage) {
-		 String authorization = null; 
-		//= new sun.misc.BASE64Encoder().encode((userName + ":" + password).getBytes());
-		
+		 String authorization = new String(java.util.Base64.getMimeEncoder().encode((userName + ":" + password).getBytes()),
+                 StandardCharsets.UTF_8);		
 		javax.xml.soap.MimeHeaders hd = soapMessage.getMimeHeaders();
 		hd.addHeader("Authorization", "Basic" + authorization);
 	}
